<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:theme="@style/AppTheme.NoActionBar"
        android:icon="@drawable/pref_basic"
        android:title="@string/pref_cat_main">

        <EditTextPreference
            android:dialogTitle="@string/pref_update_url_dialog_title"
            android:key="@string/updateUrl"
            android:textColor="@color/larisaTextColorABlack"
            android:icon="@drawable/pref_server"
            android:defaultValue="http://toir.server.loc"
            android:title="@string/pref_update_url" />

        <EditTextPreference
            android:dialogTitle="@string/pref_server_url_dialog_title"
            android:key="@string/serverUrl"
            android:defaultValue="http://toir.server.loc"
            android:icon="@drawable/pref_server"
            android:textColor="@color/larisaTextColorABlack"
            android:title="@string/pref_server_url" />

        <ListPreference
            android:key="@string/rfidDriverListPrefKey"
            android:textColor="@color/larisaTextColorABlack"
            android:icon="@drawable/pref_rfid"
            android:title="@string/pref_rfid_driver" />

    </PreferenceScreen>
    <PreferenceScreen
        android:title="Отображение и данные"
        android:icon="@drawable/pref_check"
        android:theme="@style/AppTheme.NoActionBar">
        <PreferenceCategory android:title="@string/pref_cat_show" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/pref_debug_mode"
                android:title="@string/pref_debug_mode" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/pref_autonome_mode"
                android:title="@string/pref_autonome_mode" />
            <Preference
                android:title="@string/load_test_data"
                android:key="@string/load_test_data" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:theme="@style/AppTheme.NoActionBar"
        android:icon="@drawable/pref_rfid"
        android:title="Настройки считывателя">

        <PreferenceCategory
            android:key="drvSettingsCategory"
            android:textColor="@color/larisaTextColorABlack"
            android:title="Настройки драйверов" >

            <PreferenceScreen
                android:key="@string/rfidDrvSettingKey"
                android:textColor="@color/larisaTextColorABlack"
                android:title="Настройки драйвера RFID" >
            </PreferenceScreen>
        </PreferenceCategory>

    </PreferenceScreen>
</PreferenceScreen>
