<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dip"
    android:paddingBottom="5dip"
    android:background="@color/material_drawer_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_dialog_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentLeft="true"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/order_dialog_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corner"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/order_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/order_dialog_level"
        android:text="@string/order_title" />

    <TextView
        android:id="@+id/order_dialog_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:maxLines="2"
        android:layout_below="@+id/order_dialog_title"
        android:text="@string/order_reason" />

    <TextView
        android:id="@+id/order_dialog_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_reason"
        android:text="@string/order_author" />

    <TextView
        android:id="@+id/order_dialog_worker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_author"
        android:text="@string/order_worker" />

    <TextView
        android:id="@+id/order_dialog_recieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_worker"
        android:text="@string/order_recieved" />

    <TextView
        android:id="@+id/order_dialog_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_recieve"
        android:text="@string/order_start" />

    <TextView
        android:id="@+id/order_dialog_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_start"
        android:text="@string/order_open" />

    <TextView
        android:id="@+id/order_dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_open"
        android:text="@string/order_close" />

    <TextView
        android:id="@+id/order_dialog_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:maxLines="4"
        android:layout_below="@+id/order_dialog_close"
        android:text="@string/order_comment" />

    <TextView
        android:id="@+id/order_dialog_verdict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:padding="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:layout_below="@+id/order_dialog_comment"
        android:background="@drawable/rounded_corner"
        android:text="@string/order_verdict" />

</RelativeLayout>