<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FAFAFA"
    tools:context="com.example.toir_mobile.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:onClick="onActionSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_update"
        android:onClick="onActionUpdate"
        android:orderInCategory="101"
        android:title="@string/action_update"/>
    <item
        android:id="@+id/action_about"
        android:onClick="onActionAbout"
        android:orderInCategory="102"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/btServer"
        android:onClick="onActionBTServer"
        android:title="Bluetooth сервер"/>
</menu>

