<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_order_author"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_order_comment"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/order_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/empty"
        android:inputType="textMultiLine"
        android:lines="4" />

</LinearLayout>