<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/meas_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:background="#1565c0"
            android:gravity="center_vertical"
            android:paddingLeft="5dip"
            android:text="@string/measure"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/meas_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/measure_description"
            android:textSize="16sp" />



        <Button
                android:id="@+id/button_capture"
                android:text="@string/make_photo"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="bottom"
                />
    </LinearLayout>
</LinearLayout>