<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/eoi_ImageStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/operation_status_title"
        android:src="@drawable/img_status_1" />

    <TextView
        android:id="@+id/eoi_EquipmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_ImageStatus"
        android:text="@string/equipment_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eoi_Equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_EquipmentLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eoi_OperationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eoi_EquipmentLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_ImageStatus"
        android:text="@string/operation_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/eoi_Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eoi_EquipmentLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_OperationLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/eoi_StatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eoi_EquipmentLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_Operation"
        android:text="@string/status_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/eoi_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eoi_EquipmentLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_StatusLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/eoi_ResultStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eoi_OperationLabel"
        android:layout_marginLeft="05dp"
        android:layout_toRightOf="@+id/eoi_ImageStatus"
        android:text="@string/result_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/eoi_ResultStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eoi_OperationLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/eoi_ResultStatusLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>