<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/cril_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/description"
        android:src="@drawable/no_image" />

    <TextView
        android:id="@+id/cril_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_toRightOf="@+id/cril_image"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cril_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cril_title"
        android:layout_marginLeft="5dp"
        android:textColor="#222222"
        android:textSize="14sp"
        android:layout_toRightOf="@+id/cril_image"
        android:text="@string/client_type" />

    <TextView
        android:id="@+id/cril_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cril_type"
        android:textColor="#222222"
        android:textSize="14sp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/cril_image"
        android:text="@string/client_phone" />

</RelativeLayout>